Fix #42: Remove double border under datatable head

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -49,5 +49,9 @@
 }
 
 a.accordion-toggle {
-  font-size: 18px;
+	font-size: 18px;
+}
+
+table.dataTable thead th {
+	border-bottom: none;
 }
